--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,7 @@ body {
     font-size: 1.4rem;
     transition: .4s ease;
     cursor: pointer;
+    font-family: "Rubik",sans-serif;
 }
 .card__button:hover{
     background-color: rgb(47, 0, 255);
@@ -81,6 +82,10 @@ body {
     .title{
         margin: 20px 0;
         font-size: 1.5rem;
+    }
+    .card__button{
+        font-size: 1.2rem;
+        padding: 10px 20px;
     }
     .card__imgbox{
         width: 90vw;
